Upgrade the admin app

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -11,7 +11,7 @@
       const STARTER_SYSTEM_ID = '<%= get_auth_token %>';
   </script>
 
-  <%= javascript_pack_tag 'admin' %>
+  <%= javascript_include_tag 'admin' %>
   <%= stylesheet_link_tag 'app' %>
 </head>
 <body>
