--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,52 @@
-<% if action_name.index('tailwind').blank? %>
-  <%= render 'shared/bootstrap_nav' %>
-<% else %>
-  <%= render 'shared/tailwind_nav' %>
-<% end %>
+<nav class="navbar navbar-expand-lg navbar-light border-bottom shadow-sm">
+  <div class="container">
+
+    <%= link_to "Rails MVP Starter", root_path, class: 'navbar-brand' %>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse w-100" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+
+        <% if user_signed_in? %>
+
+          <li class="nav-item">
+            <%= link_to "Account", account_path, class: 'nav-link' %>
+          </li>
+
+          <% if current_user.admin? %>
+            <li class="nav-item">
+              <%= link_to "Admin", admin_path, class: 'nav-link' %>
+            </li>
+          <% end %>
+
+          <li class="nav-item">
+            <%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete }, class: 'nav-link' %>
+          </li>
+
+        <% else %>
+
+          <li class="nav-item">
+            <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to 'Sign in', new_session_path(resource_name), class: 'nav-link' %>
+          </li>
+        <% end %>
+
+        <%= link_to 'Pricing', plans_path, class: 'nav-link' %>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+
+
+
+
+
+
+
